4.V_pro_kube_hpa_https/deploy_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp-deployment
  namespace: vprofile
  labels:
    app: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: aaravind010/vprofileapp
        ports:
        - name: vproapp-port
          containerPort: 8080
