4.V_pro_kube_hpa_https/deploy_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb-deployment
  namespace: vprofile
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: aaravind010/vprofiledb
        ports:
        - name: vprodb-port
          containerPort: 3306
        volumeMounts:
        - name: vprodb-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: vprodb-volume
        persistentVolumeClaim:
          claimName: vprodb-pvc
