4.V_pro_kube_hpa_https/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
  namespace: vprofile
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["/bin/sh"]
    args: ["-c", "while true; do wget -q -O- http://kubevpro.haraapp.shop; done"]
