4.V_pro_kube_hpa_https/service_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
  namespace: vprofile
spec:
  selector:
    app: vproapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: vproapp-port
  type: ClusterIP
