4.V_pro_kube_hpa_https/service_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
  namespace: vprofile
spec:
  selector:
    app: vprodb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: vprodb-port
  type: ClusterIP
