4.V_pro_kube_hpa_https/service_memcache.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
  namespace: vprofile
spec:
  selector:
    app: vpromc
  ports:
    - protocol: TCP
      port: 11211
      targetPort: vpromc-port
  type: ClusterIP
