4.V_pro_kube_hpa_https/service_rmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
  namespace: vprofile
spec:
  selector:
    app: vprormq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: vprormq-port
  type: ClusterIP
